cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_20.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_cbc.c:82: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_cbc.c:82:9: Write of unused value
80.           }
81.           l2c(xor0, iv);
82.           l2c(xor1, iv);
              ^
83.       }
84.       tin0 = tin1 = tout0 = tout1 = xor0 = xor1 = 0;
